changed login body,and updated the non-working routes
