# middleware/authMiddleware.js
@@ -3,22 +3,31 @@ const User = require("../models/User");
 
 // ✅ Middleware: Check for JWT token and decode it
 const authenticate = async (req, res, next) => {
-  const authHeader = req.header("Authorization");
+  const authHeader = req.headers.authorization;
 
   if (!authHeader || !authHeader.startsWith("Bearer ")) {
     return res.status(401).json({ message: "Access denied. No token provided." });
   }
 
-  const token = authHeader.replace("Bearer ", "");
+  const token = authHeader.split(" ")[1];
 
   try {
     const decoded = jwt.verify(token, process.env.JWT_SECRET);
-    req.user = decoded; // { id, role }
+    
+        const user= await User.findById(decoded.id);
+
+    if (!user) {
+      return res.status(401).json({ message: "User not found" });
+    }
+
+    req.user = user; // Now req.user._id is valid!
     next();
   } catch (err) {
+    console.log("JWT error", err)
     res.status(401).json({ message: "Invalid or expired token" });
   }
 };
+
 
 // ✅ Middleware: Allow only vendors
 const authorizeVendor = (req, res, next) => {
