# models/User.js
@@ -15,6 +15,14 @@ const userSchema = new mongoose.Schema({
     type: String,
     required: true
   },
+  confirmPassword: {
+    type: String,
+    required: true
+  },
+  country: {
+    type: String,
+    required: true
+  },
   role: {
     type: String,
     enum: ["vendor", "user"],
